SUBDIRS = scripts

bin_PROGRAMS = maca_segmenter

maca_segmenter_SOURCES = main.cpp StreamSegmenter.cpp XMLInterface.cpp

INCLUDES=-I../include

noinst_HEADERS = ../include/StreamSegmenter.h \
                 ../include/XMLInterface.hh \
	             ../include/Version.h \
                 ../include/DefaultDict.h
